--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-devtools": "^8.1.0",
     "chart.js": "^2.8.0",
     "date-fns": "^1.30.1",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
