--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.24.0",
     "ng2-charts": "^2.3.0",
     "ng2-pdf-viewer": "^5.3.4",
+    "ngrx-store-persist": "^1.0.20",
     "ngx-toastr": "^10.0.4",
     "randomcolor": "^0.5.4",
     "rxjs": "~6.4.0",
@@ -63,6 +64,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ngrx-store-freeze": "^0.2.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
