--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^1.30.1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "jasmine-marbles": "^0.6.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
